# ajazz-control-center

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .gitleaks.toml  .lsan-suppressions  .pre-commit-config.yaml  .typos.toml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GUIDELINES.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  lychee.toml  pyproject.toml  vcpkg.json
src/app/: CMakeLists.txt
src/app/qml/: DeviceList.qml  EncoderPanel.qml  Inspector.qml  KeyDesigner.qml  LoadedPluginsPage.qml  Main.qml  MousePanel.qml  NativePropertyInspector.qml  PIWebView.qml  PluginStore.qml  ProfileEditor.qml  PropertyInspector.qml  RgbPicker.qml  Settings.qml  SettingsPage.qml  SettingsRow.qml  Theme.qml
src/app/qml/components/: AppHeader.qml  BatteryIndicator.qml  Card.qml  DeviceRow.qml  EmptyState.qml  EncoderCard.qml  KeyCell.qml  PageHeader.qml  PrimaryButton.qml  Ripple.qml  SecondaryButton.qml  Toast.qml  UpdateBanner.qml
src/app/src/: app_icon.cpp  app_icon.hpp  app_update_service.cpp  app_update_service.hpp  application.cpp  application.hpp  autostart_service.cpp  autostart_service.hpp  battery_service.cpp  battery_service.hpp  branding_service.cpp  branding_service.hpp  device_maturity_map.generated.hpp  device_model.cpp  device_model.hpp  hotplug_debouncer.cpp  hotplug_debouncer.hpp  lighting_service.cpp  lighting_service.hpp  loaded_plugins_model.cpp  loaded_plugins_model.hpp  main.cpp  opendeck_catalog_fetcher.cpp  opendeck_catalog_fetcher.hpp  pi_bridge.cpp  pi_bridge.hpp  pi_url_policy.cpp  pi_url_policy.hpp  pi_url_request_interceptor.cpp  pi_url_request_interceptor.hpp  plugin_catalog_model.cpp  plugin_catalog_model.hpp  plugin_catalog_proxy_model.cpp  plugin_catalog_proxy_model.hpp  profile_controller.cpp  profile_controller.hpp  property_inspector_controller.cpp  property_inspector_controller.hpp  qt_executor.cpp  qt_executor.hpp  (+16 more)
src/core/: CMakeLists.txt
src/core/include/ajazz/core/: action_engine.hpp  capabilities.hpp  device.hpp  device_registry.hpp  event_bus.hpp  executor.hpp  hid_transport.hpp  hotplug_monitor.hpp  logger.hpp  macro_recorder.hpp  notification_service.hpp  profile.hpp  profile_bundle.hpp  profile_io.hpp  transport.hpp
src/core/src/: action_engine.cpp  device_registry.cpp  event_bus.cpp  executor.cpp  hid_transport.cpp  hotplug_monitor.cpp  logger.cpp  macro_recorder.cpp  notification_service.cpp  profile.cpp  profile_bundle.cpp  profile_io.cpp
src/devices/keyboard/: CMakeLists.txt
src/devices/keyboard/include/ajazz/keyboard/: ak980_lighting.hpp  keyboard.hpp
src/devices/keyboard/src/: proprietary_keyboard.cpp  proprietary_protocol.hpp  register.cpp  via_keyboard.cpp
src/devices/mouse/: CMakeLists.txt
src/devices/mouse/include/ajazz/mouse/: mouse.hpp
src/devices/mouse/src/: aj_series.cpp  aj_series_protocol.cpp  aj_series_protocol.hpp  aj_series_tft_pipeline.cpp  aj_series_tft_pipeline.hpp  register.cpp
src/devices/streamdeck/: CMakeLists.txt
src/devices/streamdeck/include/ajazz/streamdeck/: streamdeck.hpp
src/devices/streamdeck/src/: akp03.cpp  akp03_protocol.hpp  akp05.cpp  akp05_protocol.hpp  akp153.cpp  akp153_protocol.hpp  akp815.cpp  akp815_protocol.hpp  image_pipeline.cpp  image_pipeline.hpp  register.cpp
src/plugins/: CMakeLists.txt
src/plugins/include/ajazz/plugins/: i_plugin_host.hpp  linux_bwrap_sandbox.hpp  macos_sandbox_exec_sandbox.hpp  manifest_signer.hpp  out_of_process_plugin_host.hpp  plugin_host.hpp  sandbox.hpp  windows_app_container_sandbox.hpp
src/plugins/src/: linux_bwrap_sandbox.cpp  macos_sandbox_exec_sandbox.cpp  manifest_signer.cpp  manifest_signer_common.cpp  manifest_signer_common.hpp  manifest_signer_win32.cpp  out_of_process_plugin_host.cpp  out_of_process_plugin_host_win32.cpp  plugin_host.cpp  process_attributes_impl_win32.hpp  python_bindings.cpp  sandbox.cpp  win32_env_block.cpp  win32_env_block.hpp  win32_python_resolve.hpp  windows_app_container_sandbox.cpp  wire_protocol.hpp
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  README.md  test_load_trust_roots_fuzz.cpp
tests/fuzz/trust_roots_corpus/: seed_01_minimal.json  seed_02_two_entries.json  seed_03_bom.json  seed_04_escapes.json  seed_05_top_level_array.json  seed_06_empty_publishers.json  seed_07_unicode_names.json  seed_08_100_entries.json  seed_09_nested_object.json
tests/integration/: CMakeLists.txt  hex_loader.hpp  test_capture_replay.cpp  test_oop_plugin_host_win32_env.cpp  test_time_sync_e2e.cpp
tests/integration/fixtures/: README.md  print_pythonpath.py
tests/integration/fixtures/akp153/: ack_frame.hex  key_press_07.hex  key_press_15.hex
tests/integration/fixtures/malformed/: oversize_key_index.hex  short_frame.hex  zero_key_index.hex
tests/sanitizers/: lsan_suppressions.txt
tests/unit/: CMakeLists.txt  mock_hid_enumerator.hpp  qt_app_fixture.hpp  test_action_engine.cpp  test_aj_series_dpi_fn.cpp  test_aj_series_keymatrix_readback.cpp  test_aj_series_mock_transport.cpp  test_aj_series_mouse_macros.cpp  test_aj_series_omnibus_settings.cpp  test_aj_series_settings.cpp  test_aj_series_tft_clock.cpp  test_aj_series_wire_format.cpp  test_ak980_clock_sync_e2e.cpp  test_ak980_firmware_lighting.cpp  test_ak980_settings_batch.cpp  test_ak980_tft_chunked.cpp  test_akp03_protocol.cpp  test_akp05_protocol.cpp  test_akp05_touch_strip.cpp  test_akp153_protocol.cpp  test_app_update_service.cpp  test_battery_service.cpp  test_branding_service.cpp  test_device_registry.cpp  test_event_bus.cpp  test_factory_reset_and_logo.cpp  test_hex_to_cpparray.py  test_hotplug_harness.cpp  test_hotplug_win32_smoke.cpp  test_image_pipeline.cpp  test_linux_bwrap_sandbox.cpp  test_load_trust_roots.cpp  test_logger.cpp  test_macos_sandbox_exec_sandbox.cpp  test_manifest_signer.cpp  test_opendeck_catalog_fetcher.cpp  test_out_of_process_plugin_host.cpp  test_pi_bridge.cpp  test_plugin_catalog_proxy_model.cpp  test_profile_io.cpp  (+11 more)
tests/unit/fixtures/: mock_transport.hpp
tests/unit/fixtures/trust_roots/: README.md
(+283 files in other folders)
