[project]
name = "ajazz-plugins"
version = "0.1.0"
description = "Python plugin runtime and SDK for AJAZZ Control Center"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Lorenzo Argentieri" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", "_deps", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ANN",           # annotations
    "S",             # bandit (security)
    "D",             # pydocstyle
    "PL",            # pylint
    "PTH",           # use pathlib
    "ARG",           # unused arguments
    "RET",           # return statements
    "PT",            # pytest style
]
ignore = [
    "D100", "D104", "D107",   # missing docstring in module/package/__init__
    "D203", "D213",   # conflicting pydocstyle rules
    "PLR0913",        # too many args (plugin entry points need many)
    "S101",           # asserts in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN", "S101", "PLR2004", "ARG"]
"python/ajazz_plugins/tests/**/*.py" = ["D", "ANN", "S101", "PLR2004", "ARG"]
"python/ajazz_plugins/examples/**/*.py" = ["D", "ANN", "ARG"]
"scripts/**/*.py" = ["D", "ANN", "PLR2004", "S603"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests", "python/ajazz_plugins/tests"]
addopts = "-ra --strict-markers"
